--- a/MVCPosApp/Web.config
+++ b/MVCPosApp/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   
   <connectionStrings>
-    <add name="GCTL_ERP_DB_MVC_06_27Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GCTL_ATTENDENCE_DB;user id=sa;password=GCTL#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="GCTL_ERP_DB_MVC_06_27Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Att_DB;user id=sa;password=Walton@2021;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="GCTL_ERP_DB_MVC_06_27Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GCTL_ATTENDENCE_DB;user id=sa;password=GCTL#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="GCTL_ERP_DB_MVC_06_27Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Att_DB;user id=sa;password=Walton@2021;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
  
   <appSettings>
